# the_caves

./: Cargo.toml  README.md  ascii_notes.md  log.txt  notes.cns  notes.md
assets/ascii/: env_inter_asciis.json  item_asciis.json  npc_asciis.json  puzzle_piece_asciis.json
assets/documents/: documents.json
assets/npcs/: npc_convos.json  npc_hermit.json  npc_names.json  npc_shop_convos.json  npc_spawn_convos.json  npcs.txt
notes/: ascii.md  char_record.md  convo_template.md  documents.md  interaction_asciis.md  mapcpy.md  maps.md  nodemap_notes.md  notes.md  plot.md  puzzle_stuff.md  scratch.md  todo.md  weapon_dmg.md  weapons.md
src/: assets.rs  dialogue.rs  dialogue_utils.rs  enemy.rs  enums.rs  features.rs  gamestate.rs  gui.rs  gui_utils.rs  item.rs  lsystems.rs  main.rs  map.rs  nodemap.rs  notebook.rs  npc.rs  npc_utils.rs  parsing.rs  player.rs  puzzle.rs  puzzles.rs  settlement.rs  settlements.rs  shop.rs  stats.rs  tasks.rs  utils.rs
src/ascii/: enemy_asciis.json  npc_asciis.json
src/features/: abandoned_shacks.rs  construction.rs  field.rs  pond.rs  ruin.rs  streams.rs
src/gamestate/: compass_state.rs  enemies.rs  enemy_encounter.rs  environment_interactions.rs  feature_state.rs  interactions.rs  inventory_state.rs  item_state.rs  keys.rs  locations.rs  map_state.rs  npc_interactions.rs  npcs.rs  puzzle_state.rs  settle_state.rs  task_state.rs
src/gui/: enemy_encounters.rs  environment_interactions.rs  gui_man_draw.rs  npc_interactions.rs
src/locations/: settle_names.json
src/notebook/: lore.json  notebook.json  people.json  places.json  (+2 more)
(+44 files in other folders)
