[package]
name = "dungeon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
# tui = "0.19.0"
ratatui = { version = "0.28.0", features = ["all-widgets"]}
lazy_static = "1.4.0"
log = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
